--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 3.0.25:
+ * Support long names in nodetool output (CASSANDRA-14162)
  * Handle correctly the exceptions thrown by custom QueryHandler constructors (CASSANDRA-16703)
  * Adding columns via ALTER TABLE can generate corrupt sstables (CASSANDRA-16735)
  * Add flag to disable ALTER...DROP COMPACT STORAGE statements (CASSANDRA-16733)
