--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 3.11.12
+ * Include SASI components to snapshots (CASSANDRA-15134)
  * Make assassinate more resilient to missing tokens (CASSANDRA-16847)
  * Exclude Jackson 1.x transitive dependency of hadoop* provided dependencies (CASSANDRA-16854)
  * Validate SASI tokenizer options before adding index to schema (CASSANDRA-15135)
