--- a/NEWS.txt
+++ b/NEWS.txt
@@ -43,10 +43,12 @@ Upgrading
 ---------
     - There is a new cassandra.yaml version 2. Units suffixes should be provided for all rates(bps|mbps|kbps|Kbps|Mbps),
       memory (kb|KB|mb|MB|gb|GB|b|B) and duration(d|D|h|H|s|S|ms|MS|mS|Ms|us|US|uS|Us|µs|µS|ns|NS|nS|Nsm|M|m)
-      parameters.
+      parameters. (CASSANDRA-15234)
       Backward compatibility with the old cassandra.yaml file will be in place until the next major version.
     - Many cassandra.yaml parameters' names have been changed. Full list can be found on ...... (ADD LINK LATER WHEN PAGE
-      IS CREATED)
+      IS CREATED) (CASSANDRA-15234)
+    - Configuration parameter commitlog_sync_batch_window_in_ms has been removed. (CASSANDRA-15234)
+    
 Deprecation
 -----------
 
