HintsBuffer rewriten CAS loops to atomic adds, CommitLogSegment adds ConstantBackoffCAS Algorithm
 patch by Mick Semb Wever; reviewed by Berenguer Blasi, Benjamin Lerer for CASSANDRA-16072

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 3.11.12
+ * Reduce thread contention in CommitLogSegment and HintsBuffer (CASSANDRA-16072)
 Merged from 3.0:
  * Handle properly UnsatisfiedLinkError in NativeLibrary#getProcessID() (CASSANDRA-16578)
  * Remove mutation data from error log message (CASSANDRA-16817)
