Change version 4.0-beta5 to 4.0-rc1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-cassandra (4.0~beta5) UNRELEASED; urgency=medium
+cassandra (4.0~rc1) unstable; urgency=medium
 
   * New release
 
- -- Mick Semb Wever <mck@apache.org>  Fri, 18 Dec 2020 18:32:45 +0100
+ -- Mick Semb Wever <mck@apache.org>  Fri, 26 Mar 2021 20:20:59 +0100
 
 cassandra (4.0~beta4) unstable; urgency=medium
 
