Don't put apidocs (javadoc) into the binary artifact
 patch by Mick Semb Wever; reviewed by Brandon Williams for CASSANDRA-15561

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 3.11.11
+ * Binary releases no longer bundle the apidocs (javadoc) (CASSANDRA-16557)
  * Migrate dependency handling from maven-ant-tasks to resolver-ant-tasks, removing lib/ directory from version control (CASSANDRA-16557)
  * Make cqlsh use the same set of reserved keywords than the server uses (CASSANDRA-15663)
  * Optimize bytes skipping when reading SSTable files (CASSANDRA-14415)
