Create release branch cassandra-4.0, increment trunk version to 4.1

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,9 @@
+4.1
+Merged from 4.0:
+Merged from 3.11:
+Merged from 3.0:
+
+
 4.0-rc2
  * Fix race in fat client removal (CASSANDRA-16238)
  * Test org.apache.cassandra.net.AsyncPromiseTest FAILED (CASSANDRA-16596)
