--- a/NEWS.txt
+++ b/NEWS.txt
@@ -33,6 +33,18 @@ restore snapshots created with the previous major version using the
 'sstableloader' tool. You can upgrade the file format of your snapshots
 using the provided 'sstableupgrade' tool.
 
+4.1
+===
+
+New features
+------------
+
+Upgrading
+---------
+
+Deprecation
+-----------
+
 4.0
 ===
 
