--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.0-rc2
+ * Fix in-browser "help", Python 3 (CASSANDRA-16658)
  * Fix DROP COMPACT STORAGE for counters (CASSANDRA-16653)
  * Add back validation for AlterTableStatements (CASSANDRA-16643)
  * Fix cqlsh encoding error with unicode in multi-line statement (CASSANDRA-16539)
