--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.0-rc2
+ * Remove drivers dependency and bring cql_keywords_reserved on server side (CASSANDRA-16659)
  * Fix in-browser "help", Python 3 (CASSANDRA-16658)
  * Fix DROP COMPACT STORAGE for counters (CASSANDRA-16653)
  * Add back validation for AlterTableStatements (CASSANDRA-16643)
