--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.0-rc2
+ * Improve AuditLogging documentation and logback.xml(CASSANDRA-16682)
  * Spin up SEPWorker threads whenever we grow the number of work permits(CASSANDRA-16668)
  * Add a warning to cqlsh 6.0.0 that DESCRIBE does not work with a Cassandra 3.x servers (CASSANDRA-16652)
  * cqlsh: fix DESC TYPE with non-ascii character in the identifier (CASSANDRA-16400)
