Delay auth setup until after gossip has settled to avoid unavailables on startup
Patch by marcuse; reviewed by Sam Tunnicliffe for CASSANDRA-16783

Co-authored-by: Caleb Rackliffe <calebrackliffe@gmail.com>

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.0.2
+ * Delay auth setup until after gossip has settled to avoid unavailables on startup (CASSANDRA-16783)
  * Fix clustering order logic in CREATE MATERIALIZED VIEW (CASSANDRA-16898)
 
 4.0.1
