--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-cassandra (4.0.1) UNRELEASED; urgency=medium
+cassandra (4.0~rc3) UNRELEASED; urgency=medium
+
+  * New release
+
+ -- Mick Semb Wever <mck@apache.org>  Sun, 27 Jun 2021 16:36:29 +0200
+
+cassandra (4.0~rc2) unstable; urgency=medium
 
   * New release
 
