BinLog does not close chronicle queue leaving this to GC to cleanup
patch by David Capwell; reviewed by Caleb Rackliffe, Marcus Eriksson for CASSANDRA-16774

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.0.1
+ * BinLog does not close chronicle queue leaving this to GC to cleanup (CASSANDRA-16774)
  * Add repaired/unrepaired bytes back to nodetool (CASSANDRA-15282)
  * Upgrade lz4-java to 1.8.0 to add RH6 support back (CASSANDRA-16753)
  * Improve DiagnosticEventService.publish(event) logging message of events (CASSANDRA-16749)
