--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.1
+ * Provide a nodetool way of invalidating auth caches (CASSANDRA-16404)
  * Background schedule to clean up orphaned hints files (CASSANDRA-16815)
  * Modify SecondaryIndexManager#indexPartition() to retrieve only columns for which indexes are actually being built (CASSANDRA-16776)
  * Batch the token metadata update to improve the speed (CASSANDRA-15291)
