--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-cassandra (3.0.25) UNRELEASED; urgency=medium
+cassandra (3.0.25) unstable; urgency=medium
 
   * New release
 
- -- Alex Petrov <ifesdjeen@apache.org>  Mon, 29 Feb 2021 15:58:00 +0100
+ -- Brandon Williams <brandonwilliams@apache.org>  Sun, 25 Jul 2021 11:43:54 -0500
 
 cassandra (3.0.24) unstable; urgency=medium
 
