--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-cassandra (3.11.11) UNRELEASED; urgency=medium
+cassandra (3.11.11) unstable; urgency=medium
 
   * New release
 
- -- Alex Petrov <ifesdjeen@apache.org>  Mon, 1 Feb 2021 16:01:13 +0100
+ -- Brandon Williams <brandonwilliams@apache.org>  Sun, 25 Jul 2021 12:39:10 -0500
 
 cassandra (3.11.10) unstable; urgency=medium
 
