Avoid re-prepare storm on qualified statements after `use`
Patch by Alex Petrov; reviewed by Marcus Eriksson for CASSANDRA-15252

--- a/NEWS.txt
+++ b/NEWS.txt
@@ -52,6 +52,13 @@ Upgrading
       for further details. You also need to regenerate passwords for users for who the password
       was created while the above property was set to be more than 30 otherwise they will not be able to log in.
 
+Statement re-prepare storms
+---------------------------
+    - CASSANDRA-15252 has changed how prepared statement ids are computed in order to avoid infinite re-prepare
+      loops caused by the driver. This new behaviour will be picked up only when the entire cluster has been updated
+      to 3.0.26 or higher. In case of a mixed version cluster, different major versions will be taken as a minimum
+      required version.
+
 3.0.25
 ======
 
